--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.address: 0.0.0.0
 spring.h2.console.enabled=true
 server.port: 8443
+
+management.endpoints.enabled-by-default=true
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=*
