--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ server.port: 8443
 management.endpoints.enabled-by-default=true
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
+
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:./test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
