first version of token auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.datasource.url=jdbc:h2:./test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+jwt.issuer=skoczo
+jwt.expiration-sec=3600
+jwt.clock-skew-sec=120
+jwt.secret=55ba9581-f46f-48ee-8e05-f524faf29f28
+
+#jwt.expiration-sec=30
+#jwt.clock-skew-sec=5
