--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,4 @@
+logging.file: /tmp/iot_manager.log
 server.address: 127.0.0.1
 server.port: 8080
 
@@ -6,7 +7,7 @@ management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/iot
-spring.datasource.username=root
+spring.datasource.username=test
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
