--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+logging.file: /tmp/iot_manager.log
 server.address: 0.0.0.0
 spring.h2.console.enabled=true
 server.port: 8443
@@ -6,12 +7,12 @@ management.endpoints.enabled-by-default=true
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
 
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:./test;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/iot
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.issuer=skoczo
 jwt.expiration-sec=3600
