add brute force password crack protection

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,13 +1,15 @@
+server.error.includeStacktrace=NEVER
+
 logging.file: /tmp/iot_manager.log
 server.address: 127.0.0.1
 server.port: 8080
 
-management.endpoints.enabled-by-default=true
+management.endpoints.enabled-by-default=false
 management.endpoint.info.enabled=true
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/iot
-spring.datasource.username=test
+spring.datasource.username=iot
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
